--- a/Netytar/App.xaml
+++ b/Netytar/App.xaml
@@ -3,6 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Netytar"
-    StartupUri="Settings.xaml">
+    StartupUri="MainWindow.xaml">
     <Application.Resources />
 </Application>
