--- a/Netytar/MainWindow.xaml
+++ b/Netytar/MainWindow.xaml
@@ -191,6 +191,7 @@
                         <RowDefinition Height="1*" />
                     </Grid.RowDefinitions>
                     <Button
+                        
                         Name="btnCtrlKeyboard"
                         Grid.Row="0"
                         Grid.Column="0"
@@ -226,7 +227,9 @@
                                 TileMode="Tile" />
                         </Button.Background>
                     </Button>
+                    
                     <Button
+                        Visibility="Hidden"
                         Name="btnCtrlEyePos"
                         Grid.Row="2"
                         Grid.Column="0"
@@ -245,6 +248,7 @@
                         </Button.Background>
                     </Button>
                     <Button
+                        Visibility="Hidden"
                         Name="btnCtrlEyeVel"
                         Grid.Row="3"
                         Grid.Column="0"
@@ -289,6 +293,7 @@
                         BorderThickness="2"
                         CornerRadius="10" />
                     <Border
+                        Visibility="Hidden"
                         Name="indCtrlEyePos"
                         Grid.Row="2"
                         Grid.Column="1"
@@ -302,6 +307,7 @@
                         BorderThickness="2"
                         CornerRadius="10" />
                     <Border
+                        Visibility="Hidden"
                         Name="indCtrlEyeVel"
                         Grid.Row="3"
                         Grid.Column="1"
@@ -331,6 +337,7 @@
                         FontSize="18"
                         Foreground="White" />
                     <Label
+                        Visibility="Hidden"
                         Grid.Row="2"
                         Grid.Column="1"
                         Margin="22,0,0,0"
@@ -339,6 +346,7 @@
                         FontSize="18"
                         Foreground="White" />
                     <Label
+                        Visibility="Hidden"
                         Grid.Row="3"
                         Grid.Column="1"
                         Margin="22,0,0,0"
@@ -476,7 +484,7 @@
                             FontFamily="Digital-7 Italic"
                             FontSize="25"
                             Foreground="LightCoral"
-                            Text="MP1"
+                            Text=""
                             TextAlignment="Center" />
                     </Border>
                     <Border
@@ -662,22 +670,30 @@
                 </Grid>
 
                 <!--  LAYOUT MODIFIERS -->
-                <Grid Grid.Row="12" Grid.RowSpan="4" Margin="3,3,3,3">
+                <Grid Grid.Row="12" Grid.RowSpan="5" Margin="3,3,3,3">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*" />
                         <RowDefinition Height="1*" />
                         <RowDefinition Height="1*" />
                         <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
                     </Grid.RowDefinitions>
-                    
+                    <Label
+                            Grid.Row="0"
+                            Grid.Column="1"
+                            Margin="0,0,0,0"
+                            Content="Keys distance"
+                            FontFamily="Magneto"
+                            FontSize="18"
+                            Foreground="White" />
                     <Slider
-                        Grid.Row="0"
+                        Grid.Row="1"
                         Name="sldDistance"
                         HorizontalAlignment="Stretch"
                         Minimum="50"
                         Maximum="400"
                         Thumb.DragCompleted="sldDistance_DragCompleted" Height="18" Margin="0,0,-0.2,0" Grid.RowSpan="2" VerticalAlignment="Top" RenderTransformOrigin="0.501,0.5" />
-                    <Grid Grid.Row="1">
+                    <Grid Grid.Row="2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40" />
                             <ColumnDefinition Width="Auto" />
@@ -723,7 +739,7 @@
                             Foreground="White" />
                     </Grid>
 
-                    <Grid Grid.Row="2">
+                    <Grid Grid.Row="3">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40" />
                             <ColumnDefinition Width="Auto" />
@@ -769,7 +785,7 @@
                             Foreground="White" />
                     </Grid>
                     
-                    <Grid Grid.Row="3">
+                    <Grid Grid.Row="4">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40" />
                             <ColumnDefinition Width="Auto" />
@@ -817,11 +833,47 @@
                 </Grid>
 
                 <!--  CALIBRATOR FOR EYECONTROL  -->
-                <Grid Grid.Row="7" Margin="5,1,5,1">
+                <Grid Grid.Row="17" Grid.RowSpan ="3"  Margin="5,1,5,1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                    </Grid.RowDefinitions>
+                    <Label
+                            Grid.Row="0"
+                            Grid.Column="1"
+                            Margin="0,0,0,0"
+                            Content="Neutral zone"
+                            FontFamily="Magneto"
+                            FontSize="18"
+                            Foreground="White" />
+                    <Border
+                        Grid.Column="0"
+                        Grid.Row="1"
+                        Grid.RowSpan="2"
+                        Width="Auto"
+                        Height="Auto"
+                        BorderBrush="WhiteSmoke"
+                        BorderThickness="2"
+                        Visibility="Visible">
+                        <Button
+                            Name="btnNeutral"
+                            Width="Auto"
+                            Height="Auto"
+                            Content=""
+                            FontFamily="Magneto"
+                            FontSize="22"
+                            Foreground="White"
+                            IsCancel="True">
+                            <Button.Background>
+                                <SolidColorBrush Color="Black" />
+                            </Button.Background>
+                        </Button>
+                    </Border>
+                    
                     <!--Border
                         Grid.Column="1"
                         Width="Auto"
